# safeld

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  safeld.yaml
.github/workflows/: ci.yml  docker.yml
src/: chunked_simulator.cpp  chunked_simulator.h  main.cpp  main_chunked.cpp  memory_pool.cpp  memory_pool.h  preprocessor.cpp  preprocessor.h  simulation_engine.cpp  simulation_engine.h  utils.cpp  utils.h  vcf_merger.cpp  vcf_merger.h  vcf_processor.cpp  vcf_processor.h
